samples/_failures_safe/1761497903_92649b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_018d981d.c: In function ‘main’:
./samples/SAFE/__tmp_018d981d.c:163:20: error: missing terminating " character
  163 |             printf("Decompression failed for %s
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_018d981d.c:163:13: error: expected expression at end of input
  163 |             printf("Decompression failed for %s
      |             ^~~~~~
./samples/SAFE/__tmp_018d981d.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_018d981d.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_018d981d.c:163:13: error: expected declaration or statement at end of input
